--- a/UPSParks/UPSParks.csproj
+++ b/UPSParks/UPSParks.csproj
@@ -186,6 +186,7 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\UPS-Logo.png" />
     <Content Include="Context\UPSParksData.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>UPSParksData.Context.cs</LastGenOutput>
@@ -238,6 +239,8 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\_NavBar.cshtml" />
+    <Content Include="Views\Home\Floors.cshtml" />
+    <Content Include="Views\Shared\homepage.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
